[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-activity"
version = "0.1.0"
description = "A CLI tool to track and analyze GitHub activity"
authors = [
    { name = "manohySr", email = "manohyrajaonah@gmail.com" }
]
dependencies = [
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "idna==3.10",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "Pygments==2.19.1",
    "requests==2.32.3",
    "rich==14.0.0",
    "shellingham==1.5.4",
    "typer==0.15.4",
    "typing_extensions==4.13.2",
    "urllib3==2.4.0"
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
github-activity = "cli.command:app"

[tool.hatch.build.targets.wheel]
packages = ["cli"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space" 